[package]
name = "rscope"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust cross-reference generator for cscope"
repository = "https://github.com/flier/rust-rscope"

[dependencies]
log = "0.3"
env_logger = "0.3"
error-chain = "0.1"
lazy_static = "0.2"
getopts = "0.2"
num_cpus = "0.2"
memmap = "0.3"
nom = "1.2"
string_cache = "0.2"
cargo = "0.10"

syntex = "*"
syntex_syntax = "*"

rustbox = "0.8"
rustyline = "0.2"

[[bin]]
name = "rscope"
path = "src/main.rs"
